--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0",
     "swiper": "^11.1.14",
     "thirdweb": "^5.64.2"
   },
